# autocorrect-desktop

./: CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.en.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dto.rs  lib.rs  main.rs
src-tauri/src/commands/: app_config.rs  clipboard.rs  format_cmd.rs
src-tauri/src/config/: app_config.rs
src-tauri/src/engine/: embedded_autocorrect.rs
src/components/: FormatPage.tsx  HistoryPage.tsx  SettingsPage.tsx
src/lib/: commands.ts  diff.ts  useModalA11y.ts
src/stores/: format.ts
