[package]
name = "autocorrect-desktop"
version = "0.1.1"
description = "AutoCorrect Desktop - Chinese text formatting tool"
authors = ["cuitz"]
edition = "2021"

[lib]
name = "autocorrect_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
tauri-plugin-global-shortcut = "2.3.1"
chrono = { version = "0.4.44", features = ["serde"] }
autocorrect = { git = "https://github.com/huacnlee/autocorrect.git", tag = "v2.16.3" }
